# Icarus-pre

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: CMakeLists.txt
inherit/: node.hpp
old/: handle.cpp  node.cpp  node.hpp  node_link.hpp  node_socket.hpp  scene.hpp  utils.hpp
src/: handle.cpp  node.cpp  node.hpp  node_link.hpp  node_socket.cpp  node_socket.hpp  scene.cpp  scene.hpp  utils.hpp
utils/: node.cpp  node_link.hpp  node_socket.cpp  scene.cpp  scene.hpp  utils.hpp
